--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 header {
-    background-color: #333;
+    background-color: #0008B;
     color: #fff;
     padding: 1em 0;
     text-align: center;
