--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,12 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #00008B;
+    background-color: #f4f4f4;
 }
 
 h1 {
     background-color: #00008B;
-    color: #ffffff;
+    color: #f4f4f4;
     padding: 1em 0;
     text-align: center;
 }
