--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 h1 {
-    background-color: #f4f4f4;
+    background-color: #00008B;
     color: #f4f4f4;
     padding: 1em 0;
     text-align: center;
