--- a/styles.css
+++ b/styles.css
@@ -19,5 +19,10 @@ h1 {
 nav a {
     color: #f4f4f4;
     margin: 0 15px;
+    text-decoration: none;
+}
+
+nav a:hover {
+text-decoration: underline;
 }
 
