--- a/profexp.css
+++ b/profexp.css
@@ -1,1 +1,34 @@
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
+}
 
+header {
+    background-color: #483D8B;
+    color: #f4f4f4;
+    padding: 1em 0;
+    text-align: center;
+}
+
+h1 {
+    color: #f4f4f4;
+}
+
+nav a {
+    color: #f4f4f4;
+    margin: 0 15px;
+    text-decoration: none;
+}
+
+nav a:hover {
+text-decoration: underline;
+}
+
+footer {
+    background-color: #483D8B;
+    color: #f4f4f4;
+    padding: 1em 0;
+    text-align: center;
+}
