--- a/styles.css
+++ b/styles.css
@@ -35,5 +35,8 @@ footer {
     color: #f4f4f4;
     padding: 1em 0;
     text-align: center;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
 }
 
