--- a/research.css
+++ b/research.css
@@ -35,4 +35,7 @@ footer {
     color: #f4f4f4;
     padding: 1em 0;
     text-align: center;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
 }
