--- a/css/personal.css
+++ b/css/personal.css
@@ -27,7 +27,7 @@ nav a {
 }
 
 nav a:hover {
-text-decoration: underline;
+    text-decoration: underline;
 }
 
 footer {
@@ -40,17 +40,16 @@ footer {
     bottom: 0;
 }
 
-#lIn {
+.link {
+    display: block;
     text-decoration: none;
     padding: 32px;
     text-align: center;
-    color: #000000
+    color: #000000;
 }
 
-#gmail {
-    text-decoration: none;
-    padding: 32px;
-    text-align: center;
-    color: #000000
+.link:hover {
+    color: #0000EE;
+    text-decoration: underline;
 }
 
